Updated: left/right padding on content to avoid overlap with ez icon

--- a/packages/ezwt_extension/ezextension/ezwt/design/standard/stylesheets/websitetoolbar.css
+++ b/packages/ezwt_extension/ezextension/ezwt/design/standard/stylesheets/websitetoolbar.css
@@ -28,7 +28,7 @@ body.floating-wt div#ezwt:hover
 
 div#ezwt-content
 {
-    padding: 2px 6px;
+    padding: 2px 80px;
     text-align: center;
     background-color: white;
 }
